- distance calculation in utility class - added cache, retry with recover method - custom rest client config